# scryforge

./: .gitignore  Cargo.toml  NEXT_STEPS.md  README.md  init-prompt.md  justfile
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
.obsidian/: workspace.json
crates/fusabi-plugin-api/: Cargo.toml
crates/fusabi-plugin-api/src/: host.rs  lib.rs  plugin.rs  registry.rs
crates/fusabi-plugin-api/tests/: integration_test.rs
crates/fusabi-runtime/: Cargo.toml
crates/fusabi-runtime/src/: bytecode.rs  capability.rs  discovery.rs  error.rs  lib.rs  manifest.rs
crates/fusabi-runtime/tests/: integration_test.rs
crates/fusabi-streams-core/: Cargo.toml
crates/fusabi-streams-core/src/: lib.rs
crates/fusabi-tui-core/: Cargo.toml
crates/fusabi-tui-core/src/: lib.rs
crates/fusabi-tui-widgets/: Cargo.toml
crates/fusabi-tui-widgets/src/: lib.rs  playlist_picker.rs  preview.rs  theme.rs  time.rs
crates/fusabi-tui-widgets/tests/: widget_tests.rs
crates/scryforge-provider-core/: Cargo.toml
crates/scryforge-provider-core/src/: lib.rs
docs/: API_REFERENCE.md  ARCHITECTURE.md  COMMANDS.md  CONFIGURATION.md  GETTING_STARTED.md  KEYBINDINGS.md  PLUGIN_DEVELOPMENT.md  PROVIDERS.md  PROVIDER_DEVELOPMENT.md  RELEASE.md  ROADMAP.md  SCARAB_INTEGRATION.md  STRUCTURE.md  YOUTUBE_SETUP.md
docs/versions/vNEXT/: README.md
providers/: .gitkeep
providers/provider-bookmarks/: Cargo.toml  README.md  example-bookmarks.json
providers/provider-bookmarks/src/: lib.rs
providers/provider-dummy/: Cargo.toml
providers/provider-dummy/src/: lib.rs
providers/provider-email-imap/: Cargo.toml  README.md
providers/provider-email-imap/src/: lib.rs
providers/provider-miniflux/: Cargo.toml  README.md
providers/provider-miniflux/src/: api.rs  config.rs  lib.rs  mapping.rs
providers/provider-miniflux/tests/: integration_test.rs
providers/provider-mstodo/: Cargo.toml  README.md
providers/provider-mstodo/src/: lib.rs
providers/provider-reddit/: Cargo.toml  README.md
providers/provider-reddit/src/: lib.rs
providers/provider-rss/: Cargo.toml  README.md
providers/provider-rss/examples/: basic_usage.rs  opml_import.rs
providers/provider-rss/src/: lib.rs
providers/provider-spotify/: Cargo.toml  README.md
providers/provider-spotify/src/: lib.rs
providers/provider-youtube/: Cargo.toml  README.md
providers/provider-youtube/src/: lib.rs
scarab-scryforge/: Cargo.toml  README.md
scarab-scryforge/plugin/: README.md  scryforge.fsx
scarab-scryforge/src/: client.rs  lib.rs  status.rs
scripts/: README.md  check-clippy.nu  check-fmt.nu  ci-local.nu  run-tests.nu
scryforge-client/: Cargo.toml
scryforge-client/src/: command.rs  daemon_client.rs  main.rs
scryforge-daemon/: Cargo.toml
scryforge-daemon/src/: config.rs  lib.rs  main.rs  registry.rs  sync.rs  unified.rs
scryforge-daemon/src/api/: handlers.rs  mod.rs  saved_items.rs  server.rs
scryforge-daemon/src/cache/: mod.rs
scryforge-daemon/src/plugin/: manager.rs  mod.rs
scryforge-daemon/tests/: fixtures.rs  integration_tests.rs  registry_test.rs
scryforge-sigilforge-client/: Cargo.toml  README.md
scryforge-sigilforge-client/examples/: provider_example.rs
scryforge-sigilforge-client/src/: lib.rs
scryforge-sigilforge-client/tests/: contract_tests.rs
scryforge-tui/: Cargo.toml
scryforge-tui/src/: command.rs  daemon_client.rs  lib.rs  main.rs  search.rs  theme.rs  time.rs
scryforge-tui/src/widgets/: item_list.rs  mod.rs  omnibar.rs  preview.rs  status_bar.rs  stream_list.rs  toast.rs
scryforge-tui/tests/: daemon_integration.rs
