[workspace]
resolver = "2"
members = [
    "crates/fusabi-streams-core",
    "crates/fusabi-tui-core",
    "crates/fusabi-tui-widgets",
    "scryforge-daemon",
    "scryforge-tui",
    # Provider crates:
    "providers/provider-dummy",
    # Future provider crates will be added here:
    # "providers/provider-email-imap",
    # "providers/provider-rss",
    # "providers/provider-spotify",
    # "providers/provider-youtube",
    # "providers/provider-reddit",
    # "providers/provider-mstodo",
    # "providers/provider-bookmarks",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/raibid-labs/scryforge"
authors = ["raibid-labs"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async traits
async-trait = "0.1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID for item IDs
uuid = { version = "1.10", features = ["v4", "serde"] }

# Internal crates
fusabi-streams-core = { path = "crates/fusabi-streams-core" }
fusabi-tui-core = { path = "crates/fusabi-tui-core" }
fusabi-tui-widgets = { path = "crates/fusabi-tui-widgets" }
