[workspace]
resolver = "2"
members = [
    "crates/scryforge-provider-core",
    "crates/fusabi-runtime",
    "crates/fusabi-plugin-api",
    "scryforge-daemon",
    "scryforge-sigilforge-client",
    "scryforge-tui",
    # Provider crates:
    "providers/provider-dummy",
    "providers/provider-bookmarks",
    "providers/provider-email-imap",
    "providers/provider-reddit",
    "providers/provider-rss",
    "providers/provider-youtube",
    "providers/provider-spotify",
    "providers/provider-mstodo",
    # Integration crates:
    "scarab-scryforge",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/raibid-labs/scryforge"
authors = ["raibid-labs"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async traits
async-trait = "0.1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID for item IDs
uuid = { version = "1.10", features = ["v4", "serde"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Internal crates
scryforge-provider-core = { path = "crates/scryforge-provider-core" }
fusabi-runtime = { path = "crates/fusabi-runtime" }
fusabi-plugin-api = { path = "crates/fusabi-plugin-api" }
scryforge-sigilforge-client = { path = "scryforge-sigilforge-client" }

# Fusabi TUI Runtime (external)
fusabi-tui-core = "0.1"
fusabi-tui-widgets = "0.1"
fusabi-tui-render = "0.1"
