[package]
name = "scarab-scryforge"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# Scarab plugin API
scarab-plugin-api = { path = "../../scarab/crates/scarab-plugin-api" }

# Async runtime
async-trait.workspace = true
tokio.workspace = true

# JSON-RPC client
jsonrpsee = { version = "0.24", features = ["http-client"] }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Time handling
chrono.workspace = true

# Logging
tracing.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true
