[package]
name = "scryforge-daemon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "The Scryforge hub daemon - manages providers, caching, and exposes the local API"

[[bin]]
name = "scryforge-daemon"
path = "src/main.rs"

[dependencies]
fusabi-streams-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
chrono.workspace = true
jsonrpsee = { version = "0.24", features = ["server", "macros"] }

[dev-dependencies]
tempfile = "3.8"
