[package]
name = "scryforge-daemon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "The Scryforge hub daemon - manages providers, caching, and exposes the local API"

[[bin]]
name = "scryforge-daemon"
path = "src/main.rs"

[dependencies]
scryforge-provider-core.workspace = true
fusabi-runtime.workspace = true
fusabi-plugin-api.workspace = true
provider-dummy = { path = "../providers/provider-dummy" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
chrono.workspace = true
async-trait.workspace = true
jsonrpsee = { version = "0.24", features = ["server", "macros"] }
rusqlite = { version = "0.33", features = ["bundled"] }
directories = "6"
toml = "0.8"

[dev-dependencies]
tempfile = "3.8"
jsonrpsee = { version = "0.24", features = ["client-core", "async-client", "http-client"] }
