[package]
name = "scryforge-sigilforge-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Client library for communicating with Sigilforge auth daemon"

[dependencies]
tokio = { version = "1.40", features = ["net", "sync", "io-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
async-trait = "0.1"
directories = "5.0"

[dev-dependencies]
tokio = { version = "1.40", features = ["full", "test-util"] }
tempfile = "3.8"
mockall = "0.13"
