[package]
name = "scryforge-tui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "The Scryforge TUI client - terminal interface for browsing information streams"

[lib]
name = "scryforge_tui"
path = "src/lib.rs"

[[bin]]
name = "scryforge-tui"
path = "src/main.rs"

[dependencies]
fusabi-streams-core.workspace = true
fusabi-tui-core.workspace = true
fusabi-tui-widgets.workspace = true
chrono.workspace = true
crossterm.workspace = true
ratatui.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
jsonrpsee = { version = "0.24", features = ["client", "http-client"] }
