[package]
name = "fusabi-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Fusabi bytecode runtime for executing plugins"

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

# Plugin discovery
directories = "5"

# Plugin manifest parsing
toml = "0.8"

[dev-dependencies]
tempfile = "3"
