[package]
name = "fusabi-tui-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core TUI infrastructure for Ratatui-based Fusabi applications"

[dependencies]
crossterm.workspace = true
ratatui.workspace = true
tokio.workspace = true
anyhow.workspace = true
