[package]
name = "fusabi-tui-widgets"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Reusable TUI widgets for Fusabi applications (stream list, item list, preview pane, etc.)"

[dependencies]
fusabi-streams-core.workspace = true
fusabi-tui-core.workspace = true
ratatui.workspace = true

[dev-dependencies]
uuid.workspace = true
chrono.workspace = true
