[package]
name = "scryforge-provider-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core traits and types for Scryforge providers"

[dependencies]
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

# Optional: Sigilforge client for auth token management
scryforge-sigilforge-client = { workspace = true, optional = true }

[features]
default = []
sigilforge = ["scryforge-sigilforge-client"]
