[package]
name = "provider-bookmarks"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Bookmarks provider implementation for local bookmark management"

[dependencies]
scryforge-provider-core.workspace = true
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
uuid.workspace = true
directories = "5.0"

[dev-dependencies]
tokio.workspace = true
tempfile = "3.10"
