[package]
name = "provider-dummy"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Dummy provider implementation for testing and development"

[dependencies]
fusabi-streams-core.workspace = true
async-trait.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio.workspace = true
