[package]
name = "provider-miniflux"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Miniflux feed-reader provider for Scryforge"

[dependencies]
scryforge-provider-core.workspace = true
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true

# HTTP client with rustls-tls
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Optional Sigilforge integration for API tokens
scryforge-sigilforge-client = { workspace = true, optional = true }

[features]
default = []
sigilforge = ["scryforge-sigilforge-client", "scryforge-provider-core/sigilforge"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
serde_json = "1.0"
