[package]
name = "provider-reddit"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Reddit provider for Scryforge - access feeds, saved posts, and subreddits"

[dependencies]
fusabi-streams-core.workspace = true
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true

# HTTP client with rustls
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# URL parsing
url = "2.5"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
