[package]
name = "provider-rss"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "RSS/Atom feed provider for Scryforge"

[dependencies]
fusabi-streams-core.workspace = true
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true

# RSS/Atom feed parsing
feed-rs = "2.1"

# HTTP client with rustls
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }

# URL parsing and validation
url = "2.5"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
