[package]
name = "provider-rss"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "RSS/Atom feed provider for Scryforge"

[dependencies]
scryforge-provider-core.workspace = true
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true

# HTTP client with rustls-tls
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# RSS/Atom feed parsing
feed-rs = "2.0"

# OPML parsing
opml = "1.1"

# Error handling
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
