[package]
name = "provider-spotify"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Spotify provider for Scryforge"

[dependencies]
scryforge-provider-core = { workspace = true, features = ["sigilforge"] }
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
