[package]
name = "provider-youtube"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "YouTube provider for Scryforge - subscriptions, playlists, and watch later"

[dependencies]
fusabi-streams-core.workspace = true
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true

# HTTP client with rustls
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# URL parsing
url = "2.5"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
